--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1407,14 +1407,15 @@ a:hover {
     width: 100%;
     border-bottom: 0.5px solid #ccc;
     border-top: 0.5px solid #ccc;
+    overflow-x: scroll;
 }
 
 .partner-box {
-    margin: 20px 60px;
+    margin: 20px 10px;
 }
 
 .partner-box img {
-    width: 200px;
+    width: 180px;
     height: 130px;
     border-radius: 5px;
 }
@@ -1423,25 +1424,6 @@ a:hover {
     display: flex;
     justify-content: flex-start;
     margin: 60px;
-}
-
-.about-area-more-contact h3 {
-    margin-bottom: 20px;
-}
-
-.about-area-more-contact ul {
-    list-style: none;
-}
-
-.about-area-more-contact ul li {
-    margin-bottom: 10px;
-}
-
-.about-area-more-contact ul li a {
-    font-size: 16px;
-    line-height: 24px;
-    color: #929293;
-    margin-bottom: 10px;
 }
 
 .section-about-form-left form { 
@@ -1503,7 +1485,7 @@ a:hover {
     color: #fff;
     box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    padding: 5px 0; 
+    padding: 10px 0; 
     cursor: pointer;
     font-weight: 600;
 }
@@ -1529,7 +1511,6 @@ a:hover {
 
 .section-cart-area-left h3 {
     margin-bottom: 20px;
-    font-size: 16px;
     line-height: 20px;
     color: #000000;
 }
@@ -2560,6 +2541,11 @@ td {
     .header-search-form form input {
         width: 280px;
     }
+
+    .section-about-value-box {
+        width: 280px;
+        padding: 20px;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -2595,7 +2581,7 @@ td {
     }
 
     .category-box {
-        width: 80vw;
+        width: 95vw;
         margin-bottom: 40px;
     }
 
@@ -2614,13 +2600,85 @@ td {
     }
 
     .section-about-left {
-        margin: 0;
+        margin: 0!important;
     }
 
     .section-about-img {
         display: flex;
         justify-content: center;
         margin-bottom: 20px;
+    }
+
+    .section-cart-area-left h3, .section-cart-area-right {
+        font-size: 14px;
+    }
+
+    .cart-desc-text {
+        font-size: 12px;
+    }
+
+    .section-about-text {
+        margin-bottom: 0;
+    }
+
+    .section-about-values {
+        flex-direction: column;
+    }
+
+    .section-about-value-box {
+        justify-content: center;
+        width: 95vw;
+        margin-bottom: 40px;
+    }
+
+    .section-about-value-box-underline {
+        margin: 10px;
+    }
+
+    .section-about-value-box h3{
+        font-size: 22px;
+    }
+
+    .section-about-button a {
+        margin-top: 10px;
+    }
+
+    .section-about-value-box p {
+        font-size: 18px;
+    }
+    
+    .section-cart-area {
+        flex-direction: column;
+    }
+
+    .section-cart-area-left {
+        margin: 0;
+    }
+
+    .section-cart-products {
+        max-height: 450px;
+    }
+
+    .section-cart-products, .section-cart-area-right {
+        height: auto;
+        width: 95vw;
+    }
+
+    .botom-button {
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
+    .section-cart-area-right form .input-name, .section-cart-area-right form .input-cnpj, .section-cart-area-right form .input-email, .section-cart-area-right form .input-phone, .form-double-info label, .section-cart-area-right form textarea {
+        width: 100%;
+    }
+
+    .form-double-info {
+        flex-direction: column;
+    }
+
+    .section-cart-area-right form button, .section-cart-area-right form button {
+        padding: 10px 0;
     }
 }
 
@@ -2716,7 +2774,34 @@ td {
         width: 95vw;
         margin-bottom: 20px;
     }
-}
+
+    .section-about-value-box h3, .section-about-value-box p {
+        font-size: 14px;
+    }
+
+    .section-about-form {
+        display: block;
+    }
+
+    .section-about-form-left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .section-about-form-left form {
+        margin-right: 0;
+    }
+
+    .form-double-info {
+        flex-direction: column;
+    }
+
+    .section-about-form-left form .input-name, .section-about-form-left form .input-cc, .section-about-form-left form textarea, .section-about-form-left form .input-email, .section-about-form-left form .input-phone {
+        width: 95vw;
+    }
+}   
 
 @media (max-width: 545px) {
     .section-categories-area-tittle {
