--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -850,7 +850,7 @@ label p {
     margin-bottom: 40px;
 }
 
-.category-box-button a, .section-catalog-button a, .budget-button a, .section-about-button a {
+.category-box-button a, .section-catalog-button a, .budget-button a, .section-about-button a, .home-button {
     width: 150px;
     height: 30px;
     background-color: #F30000;
@@ -874,11 +874,8 @@ label p {
     background-image: url('../../assets/images/icons/icone-orçamento.png');
 }
 
-.budget-button-img:hover {
-    background-image: url('../../assets/images/icons/icone-orçamento-branco.png');
-}
 
-.category-box-button a:hover, .section-catalog-button a:hover, .budget-button a:hover, .section-about-button a:hover {
+.category-box-button a:hover, .section-catalog-button a:hover, .budget-button a:hover, .section-about-button a:hover, .home-button:hover {
     background-color: #fff;
     color: #F30000;
 }
@@ -1385,6 +1382,27 @@ label p {
     border-bottom: 1px solid #ccc;
     border-left: 1px solid #ccc;
     padding: 4.5px 7px;
+}
+
+.thanks-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    text-align: center;
+}
+
+.thanks-area-modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #fff;
+    filter: drop-shadow(-1px 2px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 7px;
+    padding: 30px 10px;
+    width: 500px;
+    height: 200px;
 }
 
 /*Products Page CSS*/
