--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -780,53 +780,96 @@ label p {
     width: 100%;
 }
 
-.slider {
-    width: 99.1vw;
-    height: 800px;
-    overflow: hidden;
-}
-
-.slider--width {
-    height: 100%;
-    display: flex;
-    transition: all ease 0.3s;
-}
-
-.slider--item {
-    width: 100vw;
-    height: inherit;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #FFF;
-    text-shadow: 0px 1px 1px #333;
-    font-size: 50px;
-}
-.slider--controls {
-    position: absolute;
-    z-index: 99;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.slider--control {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    overflow: hidden;
+.slideshow-container {
+    position: relative;  }
+  
+  /* Make the images invisible by default */
+  .Containers {
+    display: none;
+    transition: all 1s ease;
+  }
+  
+  /* forward & Back buttons */
+  .Back, .forward {
     cursor: pointer;
-    margin: 0 20px;
-}
-
-.slider--control i {
-    font-size: 80px;
-    color: #000;
-}
+    position: absolute;
+    top: 48%;
+    width: auto;
+    margin-top: -23px;
+    padding: 17px;
+    color: grey;
+    font-weight: bold;
+    font-size: 19px;
+    transition: 0.4s ease;
+    border-radius: 0 5px 5px 0;
+    user-select: none;
+  }
+  
+  /* Place the "forward button" to the right */
+  .forward {
+    right: 0;
+    border-radius: 4px 0 0 4px;
+  }
+  
+  /*when the user hovers,add a black background with some little opacity */
+  .Back:hover, .forward:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption Info */
+  .Info {
+    color: #e3e3e3;
+    font-size: 16px;
+    padding: 10px 14px;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Worknumbering (1/3 etc) */
+  .MessageInfo {
+    color: #f2f2f3;
+    font-size: 14px;
+    padding: 10px 14px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The circles or bullets and indicators */
+  .dots {
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+    margin: 0 3px;
+    background-color: #acc;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all 0.5s ease;
+  }
+  
+  .enable, .dots:hover {
+    background-color: #717161;
+  }
+  
+  /* Faint animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.4s;
+    animation-name: fade;
+    animation-duration: 1.4s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .5}
+    to {opacity: 2}
+  }
+  
+  @keyframes fade {
+    from {opacity: .5}
+    to {opacity: 2}
+  }
+  
 
 .section-categories-area-tittle {
     display: flex;
@@ -870,6 +913,7 @@ label p {
     font-size: 12px;
     line-height: 15px;
     margin-bottom: 40px;
+    text-align: center;
 }
 
 .category-box-button a, .section-catalog-button a, .budget-button a, .section-about-button a, .home-button {
@@ -1506,40 +1550,6 @@ label p {
     margin-bottom: 20px;
 }
 
-.section-about-partners-banner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    border-bottom: 0.5px solid #ccc;
-    border-top: 0.5px solid #ccc;
-    overflow-x: scroll;
-}
-
-.partner-box {
-    margin: 20px 10px;
-}
-
-.partner-box img {
-    width: 180px;
-    height: 130px;
-    border-radius: 5px;
-}
-
-.section-about-form {
-    display: flex;
-    justify-content: flex-start;
-    margin: 60px;
-}
-
-.section-about-form-left form { 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-    margin-right: 150px;
-}
 
 .section-about-form-left form label p {
     margin-bottom: 10px;
@@ -2672,6 +2682,14 @@ td {
 }
 
 @media (max-width: 1000px) {
+
+    .mobile-menu {
+        margin-bottom: 65px;
+    }
+
+    .Containers img {
+        min-height: 220px;
+    }
 
     .section-product-area {
         flex-direction: column;
